syntax = "proto3";

package raft;

option go_package = "github.com/vzdtic/raft-kv-store/repository_after/proto";

// Raft RPC Service
service RaftService {
    // Vote request for leader election
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
    
    // Append entries for log replication and heartbeat
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    
    // Install snapshot for log compaction
    rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}

// Client KV Service
service KVService {
    rpc Set(SetRequest) returns (SetResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

// Cluster Management Service
service ClusterService {
    rpc AddNode(AddNodeRequest) returns (AddNodeResponse);
    rpc RemoveNode(RemoveNodeRequest) returns (RemoveNodeResponse);
    rpc GetClusterInfo(GetClusterInfoRequest) returns (GetClusterInfoResponse);
}

// Log Entry
message LogEntry {
    uint64 term = 1;
    uint64 index = 2;
    bytes command = 3;
    EntryType type = 4;
}

enum EntryType {
    ENTRY_NORMAL = 0;
    ENTRY_CONFIG_CHANGE = 1;
    ENTRY_NOOP = 2;
}

// RequestVote RPC
message RequestVoteRequest {
    uint64 term = 1;
    string candidate_id = 2;
    uint64 last_log_index = 3;
    uint64 last_log_term = 4;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool vote_granted = 2;
}

// AppendEntries RPC
message AppendEntriesRequest {
    uint64 term = 1;
    string leader_id = 2;
    uint64 prev_log_index = 3;
    uint64 prev_log_term = 4;
    repeated LogEntry entries = 5;
    uint64 leader_commit = 6;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
    uint64 match_index = 3;
    uint64 conflict_index = 4;
    uint64 conflict_term = 5;
}

// InstallSnapshot RPC
message InstallSnapshotRequest {
    uint64 term = 1;
    string leader_id = 2;
    uint64 last_included_index = 3;
    uint64 last_included_term = 4;
    bytes data = 5;
    repeated ClusterMember configuration = 6;
}

message InstallSnapshotResponse {
    uint64 term = 1;
}

// Client KV Messages
message SetRequest {
    string key = 1;
    bytes value = 2;
    string client_id = 3;
    uint64 request_id = 4;
}

message SetResponse {
    bool success = 1;
    string error = 2;
    string leader_hint = 3;
}

message GetRequest {
    string key = 1;
    bool linearizable = 2;
}

message GetResponse {
    bool found = 1;
    bytes value = 2;
    string error = 3;
    string leader_hint = 4;
}

message DeleteRequest {
    string key = 1;
    string client_id = 2;
    uint64 request_id = 3;
}

message DeleteResponse {
    bool success = 1;
    string error = 2;
    string leader_hint = 3;
}

// Cluster Management Messages
message ClusterMember {
    string node_id = 1;
    string address = 2;
    bool voting = 3;
}

message AddNodeRequest {
    string node_id = 1;
    string address = 2;
}

message AddNodeResponse {
    bool success = 1;
    string error = 2;
}

message RemoveNodeRequest {
    string node_id = 1;
}

message RemoveNodeResponse {
    bool success = 1;
    string error = 2;
}

message GetClusterInfoRequest {}

message GetClusterInfoResponse {
    string leader_id = 1;
    uint64 term = 2;
    repeated ClusterMember members = 3;
}